RESOLVED FIXED200758
for-await-of has bad error message if used in non-async function
https://bugs.webkit.org/show_bug.cgi?id=200758
Summary for-await-of has bad error message if used in non-async function
Joseph Pecoraro
Reported 2019-08-14 22:28:49 PDT
for-await-of has bad error message if used in non-async function ---- >>> function f() { for await (let x of []) {} } } for-await-of can't be used only in async function or async generator..:1 ---- It should say that it can only be used an async function or async generator.
Attachments
[PATCH] Proposed Fix (1.35 KB, patch)
2019-08-14 22:30 PDT, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (1.34 KB, patch)
2019-08-14 22:32 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2019-08-14 22:30:14 PDT
Created attachment 376354 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 2 2019-08-14 22:32:25 PDT
Created attachment 376355 [details] [PATCH] Proposed Fix
Ross Kirsling
Comment 3 2019-08-14 22:46:34 PDT
Comment on attachment 376355 [details] [PATCH] Proposed Fix Looks good as long as no tests are counting on this output.
WebKit Commit Bot
Comment 4 2019-08-15 01:40:12 PDT
Comment on attachment 376355 [details] [PATCH] Proposed Fix Clearing flags on attachment: 376355 Committed r248711: <https://trac.webkit.org/changeset/248711>
WebKit Commit Bot
Comment 5 2019-08-15 01:40:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-08-15 01:41:16 PDT
Note You need to log in before you can comment on or make changes to this bug.