for-await-of has bad error message if used in non-async function https://bugs.webkit.org/show_bug.cgi?id=200758

Reviewed by Ross Kirsling.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseForStatement):
Improve error message.


Canonical link: https://commits.webkit.org/214495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248711 268f45cc-cd09-0410-ab3c-d52691b4dbfc